--- a/django_app/templates/portfolio/portfolio_dashboards.html
+++ b/django_app/templates/portfolio/portfolio_dashboards.html
@@ -11,7 +11,7 @@
     </div>
     <div class="container px-3">
         <div class="row justify-content-center">
-            <div class="col-md pt-4">
+            <div class="col-lg-7 col-md-10 pt-4">
                 <div class="card mb-4 shadow-lg">
                     <div class="card-header text-center">
                         <h4 class="my-2">Financial Analysis</h4>
