--- a/django_app/templates/portfolio/portfolio_home.html
+++ b/django_app/templates/portfolio/portfolio_home.html
@@ -1,13 +1,13 @@
 {% load static %}
 <section class="home bg-light min-vh-100" id="home">
     <div class="container">
-        <div class="row align-items-center align-content-center py-5">
-            <div class="col-md-6 mt-md-0 py-5">
+        <div class="row align-items-center align-content-center py-lg-5">
+            <div class="col-md-6 py-5">
                 <div class="home-img text-center">
                         <img src="{% static 'imgs/pngs/poopstack.png' %}" class="rounded-circle mw-100 shadow-lg"alt="poop stack dev">
                 </div>
             </div>
-            <div class="col-md-6 mt-2 mt-md-0 order-md-first">
+            <div class="col-md-6 mt-md-0 order-md-first">
                 <div class="home-text">
                     <p class="text-muted mb-1">Hello I'm a</p>
                     <h1 class="text-dark fs-1 ">Python Developer</h1>
