--- a/django_app/templates/portfolio/portfolio_base.html
+++ b/django_app/templates/portfolio/portfolio_base.html
@@ -5,23 +5,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/portfolio_style.css' %}">
     <link rel="stylesheet" href="{% static 'css/font_awesome.min.css' %}">
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <script src="https://unpkg.com/scrollreveal"></script>
     <title>Portfolio</title>
-</head >
+</head>
 <body>
-    {% include 'portfolio_navbar.html' %}
 
+    {% include 'portfolio_navbar.html' %}
+    
     {% include 'portfolio_home.html' %}
 
     {% include 'portfolio_about.html' %}
 
     {% include 'portfolio_dashboards.html' %}
 
-<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-<script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
-<script src="{% static 'js/scrollreveal.js' %}"></script>
+    {% include 'portfolio_contact.html' %}
+
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+    <script src="{% static 'js/scrollreveal.js' %}"></script>
 </body>
 </html>
