--- a/django_app/templates/portfolio/portfolio_navbar.html
+++ b/django_app/templates/portfolio/portfolio_navbar.html
@@ -9,6 +9,7 @@
         <a class="nav-link" href="#home">Home</a>
         <a class="nav-link" href="#about">About</a>
         <a class="nav-link" href="#dashboards">Dashboards</a>
+        <a class="nav-link" href="#contact">Contact</a>
       </div>
     </div>
   </div>
