--- a/django_app/templates/portfolio/portfolio_contact.html
+++ b/django_app/templates/portfolio/portfolio_contact.html
@@ -9,21 +9,32 @@
         </div>
         <div class="row justify-content-center">
             <div class="col-lg-5 p-3 text-right">
-                <form>
+                <form action="" method=POST>
+                {% csrf_token %}
+                {% if submitted == False %}
                     <div class="mb-3">
                         <label for="NameInput" class="form-label">Name</label>
-                        <input type="email" class="form-control" id="NameInput" aria-describedby="emailHelp">
+                        {{ form.Name}}
                     </div>
                     <div class="mb-3">
                       <label for="EmainInput" class="form-label">Email address</label>
-                      <input type="email" class="form-control" id="EmailInput" aria-describedby="NeverShare">
+                        {{ form.Email }}
                       <div id="NeverShare" class="form-text">I'll never share your email with anyone else.</div>
                     </div>
                     <div class="mb-3">
                         <label for="MessageInput" class="form-label">Message</label>
-                        <textarea id="MessageInput" class="form-control" aria-label="With textarea"></textarea>
+                        {{ form.Message }}
                     </div>
-                    <button type="submit" class="btn btn-dark">Submit</button>
+                    <input type="submit" value="Submit" class="btn btn-dark">
+                {% else %}
+                    <div class="success-alert alert alert-success shadow-lg" role="alert">
+                        <h4 class="alert-heading">Thank you!</h4>
+                        <hr>
+                        <p class="mb-0">
+                            I will be reaching out to you within the next 3-7 days. If I somehow missed your message, try reaching me through Linkedin.
+                        </p>
+                    </div>
+                {% endif %}
                 </form>
             </div>
         </div>
