changed target for link redirect

--- a/django_app/templates/portfolio/portfolio_contact.html
+++ b/django_app/templates/portfolio/portfolio_contact.html
@@ -41,8 +41,8 @@
         <div class="row justify-content-center py-3">
             <div class="col-lg-5 text-right">
                 <div class="social-links px-1">
-                    <a class="text-dark me-2" href="https://www.linkedin.com/in/joey-chrys"><i class="fab fa-linkedin fa-2x"></i></a>
-                    <a class="text-dark me-2" href="https://github.com/joeychrys"><i class="fab fa-github-square fa-2x"></i></a>
+                    <a class="text-dark me-2" href="https://www.linkedin.com/in/joey-chrys "target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
+                    <a class="text-dark me-2" href="https://github.com/joeychrys" target="_blank"><i class="fab fa-github-square fa-2x"></i></a>
                 </div>
             </div>
         </div>
